--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= full_title(yield(:title)) %></title>			
+    <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all',
+                                              'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+    <![endif]-->
+     <%= render 'layouts/shim' %>  
+     <!-- Above just means that we are going to get html from a file and paste it in, keeps it clean -->
   </head>
-
   <body>
-    <%= yield %>
+  	<%= render 'layouts/header' %>
+    <div class="container">
+ 		<%= yield %>
+ 		<%= render 'layouts/footer' %>
+    </div>
   </body>
-</html>
+</html> 
